updated bio, design, added pics

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 <body class="dark">
 
 	<!-- CORNER ELEMENTS -->
-	<button class="corner-btn top-left" id="homeBtn">[ * ]</button>
+	<button class="corner-btn top-left" id="homebtn">[ * ]</button>
 	<div class="corner-label top-right" id="dateLabel"></div>
-	<button class="corner-btn bottom-left" id="langBtn">[ EN ]</button>
-	<button class="corner-btn bottom-right" id="themeToggle">[ ☾ ]</button>
+	<button class="corner-btn bottom-left" id="langbtn">[ EN ]</button>
+	<button class="corner-btn bottom-right" id="themeToggle">[ ☀ ]</button>
 
 
 
@@ -24,8 +24,7 @@
 
 		<section class="left">
 			<h1 class="name">
-				<span>Max</span><br>
-				<span>Volkan</span>
+				<span>Max Volkan</span><br>
 			</h1>
 
 			<!-- <nav class="links"> -->
@@ -34,17 +33,38 @@
 			<!-- </nav> -->
 
 			<div class="info-panel">
-				<div class="label">FIELD//Affiliation</div>
+				<div class="label">Affiliation</div>
+				<p>The University of Tokyo, Graduate School of Frontier Sciences</p>
 				<p>Human and Engineered Environmental Studies</p>
-				<p>University of Tokyo, Graduate School Frontier Sciences</p>
-				<p>Wearable Sensing & Multimodal Systems</p>
+				<p>Graduate Student</p><br>
+				<p>NASA GeneLab Analysis Working Group, AI/ML Division</p>
+				<br>
+				<p>Fulbright Fellow (Japan, 2024-2025)</p>
+				<a href="/bio" class="link-item">read more... ↗</a>
 			</div>
 		</section>
 
+		<section class="center">
+		</section>
 		<section class="right">
-			<p class="bio">
-				[placeholder: put what I do]
-			</p>
+
+			<div class="hero-photo">
+				<img src="assets/photos/brain.webp">
+			</div>
+			<!-- <p class="bio"> -->
+			<!-- 	I am currently studying the brain and the autonomic nervous system. Specifically, my -->
+			<!-- 	research focuses on the brain-heart connection -->
+			<!-- 	and how it relates to mental fatigue. <br><br>I am also interested in teleological -->
+			<!-- 	questions -->
+			<!-- 	in -->
+			<!-- 	physiology (why phenomena such as fatigue, neural connectivity, and regulation exist -->
+			<!-- 	in the first place). -->
+			<!-- 	<br><br>I also develop games both inside and outside of research, including a recent -->
+			<!-- 	biosignal-controlled rhythm game for accessibility. -->
+			<!-- 	<br><br>Outside of work, I love listening to and making experimental electronic music -->
+			<!-- 	and -->
+			<!-- 	jazzy hip-hop beats, as well as creating digital audio-reactive art. -->
+			<!-- </p> -->
 		</section>
 
 	</main>
