fixed dark mode light mode css text stlying and made it automatic to match OS state

--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 	<link href="https://fonts.googleapis.com/css2?family=Fira+Mono:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
 
-<body class="light">
+<body>
 	<div class="page">
 		<button class="corner-btn top-left" id="homebtn">[ * ]</button>
 		<div class="corner-label top-right" id="dateLabel"></div>
 		<!-- <button class="corner-btn bottom-left" id="langbtn">[ EN ]</button> -->
-		<button class="corner-btn bottom-right" id="themeToggle">[ ☀ ]</button>
+		<button class="corner-btn bottom-right" id="themeToggle">[ ☾ ]</button>
 
 		<div class="hero-photo">
 			<img src="assets/photos/brain.webp">
@@ -66,9 +66,9 @@
 			<div class="subitem-list">
 				<p class="degree">M.Sc. in Human and Engineered Environmental Sciences
 				<p class="university">The University of Tokyo (Ongoing)</p>
-				<p class="degree">B.S. in Cognitive Science (with
+				<p class="degree">B.S. in Cognitive Science with
 					Highest
-					Honors)
+					Honors
 				</p>
 				<p class="university">University of California, Santa
 					Cruz
