added year to nasa preprint

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                                                         <a href="papers/2026.01.22.701181v1.full.pdf"
                                                                 target="_blank">[preprint]</a>
                                                 </div>
-                                                <span class="mini-meta">bioRxiv</span>
+                                                <span class="mini-meta">bioRxiv 2026</span>
                                         </div>
                                 </div>
                                 <div class="paper-item">
