neurobeat video link

--- a/index.html
+++ b/index.html
@@ -142,9 +142,10 @@
                                 </div>
 
                                 <div class="project-item">
-                                        <p class="project-title" onclick="openProject('neurobeat')"
-                                                data-tech="godot, matlab">
-                                                NeuroBeat : BCI Rhythm Game Prototype
+                                        <p class="project-title">
+                                                <a class="project-title"
+                                                        href='https://www.youtube.com/watch?v=7TO-skBlHlY'>
+                                                        NeuroBeat : Bio-signal Rhythm Game</a>
                                         </p>
                                 </div>
                                 <div class="project-item">
